src/App.css
body {
  margin: 0;
  padding: 0;

  background-size: cover;
  box-sizing: border-box;
  background: #152331; /* fallback for old browsers */
  background: #000046; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #1cb5e0,
    #000046
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #1cb5e0,
    #000046
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.container {
  margin: 0 auto;
  width: 80%;
  padding: 0;
}
html,
body {
  scroll-behavior: smooth;
  height: 100%;
  margin: 0;
}
p {
  transition: all 300ms ease;
}
.row {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 24px;
}
img {
  width: 100%;
}
p {
  font-size: 14px;
  word-break: break-word;
}

a {
  text-decoration: none;
  color: inherit;
}

a:hover {
  text-decoration: underline;
}
.hidden {
  display: none;
}
.bold {
  font-weight: bold;
}

.padding-left {
  margin-right: 4px;
}

/*

User Card

*/
.user-card:hover {
  transform: translateY(-8px);
}
.user-list {
  width: auto;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.user {
  width: 50%;
}

.user-card {
  background-color: white;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  margin: 10px;
  transition: 0.3s;
  cursor: pointer;
  border-radius: 10px;
  width: 250px;
  max-width: 250px;
  padding: 10px;
  transition: all 0.3s ease;

  text-align: center;
}

.user-card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.post-card {
  background-color: #fff;
  margin: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  border-radius: 10px;
}

.post-card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.post-card__container {
  padding: 2px 16px;
}

.back-btn {
  color: #fff;
  background-color: black;
  border: none;
  border-radius: 10px;
  padding: 10px 20px;
  font-size: 20px;
  font-weight: 600;
  cursor: pointer;
}

.post {
  border: 1px solid black;
  background-color: white;
  margin: 20px;
}

.post__title {
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
  border-bottom: 1px solid black;
  padding: 8px;
}

.post__body {
  padding: 0 8px;
}

.post__search {
  margin-top: 16px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
}

.post__search--container {
  display: flex;
  flex-direction: column;
}

.post__search--label {
  padding-right: 8px;
}

select {
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid #dcdfe6;
  color: #606266;
  height: 40px;
  line-height: 40px;
  outline: none;
  padding: 0 16px;
  width: 100%;
  max-width: 200px;
}
.movie--logo {
  width: 160px;
  filter: grayscale(0%);
  transition: all 300ms ease;
  margin: 0 81px 0 81px;
}
.movie__logo-img {
  display: flex;
  justify-content: space-between;
}
.movie--logo:hover {
  filter: grayscale(100%) invert(1);
}

.nav__list--img {
  display: flex;
  justify-content: start;
}

.movie__img {
  width: 100%;
  max-height: 320px;
  max-width: 250px;
  transition: all 300ms ease;
}

.movies__title {
  text-align: center;
  font-size: 40px;
  color: #242424;
  margin-top: 108px;
}
/* 
 
 LOADING STATE
 
 */

.movies__loading {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 60px;
  font-size: 60px;
  color: #7342d6;
}

.fa-spinner {
  animation: rotate 600ms infinite linear;
}

.movies__loading--spinner {
  display: none !important;
}

.movies__loading .movies__loading--spinner {
  display: block !important;
}

@keyframes rotate {
  0% {
    transform: rotate(0);
  }

  100% {
    transform: rotate(360deg);
  }
}

/* 

FOOTER

*/

.nav__list {
  background-color: #242424;
  padding: 10px;
  margin-top: 100px;
}
.footer__list,
footer {
  background-color: #242424;
  padding: 10px;
  margin-top: 100px;
}

.footer__link,
.footer__copyright,
.nav__link {
  color: #fff;
}
.footer__copyright {
  padding: 20px;
  text-align: center;
  margin-bottom: 10px;
  align-items: center;
}
.footer__list {
  padding: 30px;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
}
.nav__list {
  padding: 30px 0;
  margin: 0 auto;
  display: flex;
  flex-direction: column;

  align-items: center;
}

.footer__link {
  padding: 0 8px;
}
.nav__link {
  padding: 8px 0;
}

/*

search bar

*/

.search-form {
  display: flex;
  justify-content: center;
  gap: 16px;
}

.search-form__input {
  padding: 8px;
  font-size: 16px;
}

.filter__wrap {
  display: flex;
  justify-content: flex-start;
  margin-left: 32px;
}
.filter,
.filter--bold {
  font-weight: bold;
}

.filter:hover {
  opacity: 1;
  color: #000;
}

/*

Skeleton Loading

*/

.movie__title--skeleton {
  width: 100%;
  height: 320px;
  background-color: #c0c0c0;
  margin-bottom: 8px;
  border-radius: 4px;
  max-width: none;
}

h3.movie__title--skeleton,
p.movie__title--skeleton {
  height: 16px;
  margin: 0 0 8px;
  border-radius: 4px;
  background-color: #c0c0c0;
}
.movie__body--skeleton {
  max-height: 320px;
  max-width: 250px;
  background-color: #c0c0c0;
  padding: 8px;
}

.img__body--skeleton {
  width: 100%;
  max-width: 250px;
  height: 320px;
  background-color: #c0c0c0;
  margin-bottom: 8px;
}

/*

About/Contact


*/
.blue {
  color: blue;
}

.fa-icon--name {
  display: block;
  font-size: 30px;
  margin: 0 auto;
  transition: all 300ms ease;
  text-align: center;
}
.fa-icon {
  display: block;
  font-size: 30px;
  margin: 0 auto;
  transition: all 300ms ease-in-out;
  text-align: center;
}

.fa-icon:hover {
  text-decoration: underline;
}
.fa-icon--name:hover {
  transform: translateY(-2px);
}

/*

Landing 

*/

.landing__header--top {
  font-size: 64px;
  text-align: center;
  margin-bottom: 64px;
}
.landing__header--main {
  font-size: 64px;
  text-align: center;
  margin-bottom: 64px;
}
.landing__header {
  font-size: 52px;
  text-align: center;
  margin-bottom: 64px;
  width: 60%;
}

.landing-header-font {
  color: #fff;
}

.landing__highlights {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  height: 100%;
}

.highlights {
  align-items: center;
  display: flex;
  flex-direction: column;
  padding: 0 24px;
  width: 33.33333%;
}

.highlight__img {
  align-items: center;
  border: 2px solid;
  border-radius: 4px;
  transition: all 300ms ease;
  display: flex;
  font-size: 32px;
  height: 100px;
  justify-content: center;
  margin-bottom: 24px;
  width: 100px;
}

.highlight__img:hover {
  color: #fff;
}
.highlight__subtitle {
  font-size: 20px;
  margin-bottom: 16px;
  display: flex;
  transition: all 300ms ease;
  text-align: center;
}

.highlight__subtitle:hover {
  color: #fff;
}
.highlight__para {
  max-width: 200px;
  text-align: center;
  width: 70%;
  font-size: 18px;
  transition: all 300ms ease;
}
.highlight__para:hover {
  color: #fff;
}
.btn {
  background-color: #242424;
  border: none;
  border-radius: 4px;
  color: #fff;
  font-size: 20px;
  padding: 12px 24px;
  margin-top: auto;
  transition: all 300ms ease;
  align-self: center;
}

.btn:hover {
  font-weight: bold;
  color: #242424;

  background-color: #e6d9d9;
}

/*

Media queries


*/

@media (max-width: 1200px) {
  .landing__header--top {
    font-size: 52px;
    text-align: center;
    margin-bottom: 104px;
    width: 90%;
  }
  .landing__header--main {
    font-size: 40px;
    text-align: center;
    width: 90%;
  }
  .landing__header {
    font-size: 40px;
    text-align: center;
    width: 60%;
  }
  .movie--logo {
    margin: 0 64px 0 64px;
  }
}
@media (max-width: 1024px) {
  .landing__header {
    font-size: 40px;
    text-align: center;
    width: 60%;
  }
  .landing__header--top {
    font-size: 40px;
    text-align: center;
    margin-bottom: 104px;
    width: 90%;
  }
  .landing__header--main {
    font-size: 40px;
    width: 90%;
  }
  .landing__highlights {
    align-items: center;
    display: flex;

    padding: 0 24px;
    width: 90%;
  }
  .nav__list {
    flex-direction: column;
  }
  .footer__list {
    flex-direction: column;
  }
  .nav__link,
  .footer__link {
    padding: 8px 0;
  }
  .movie--logo:nth-child(1) {
    display: none;
  }
  .movie--logo:nth-child(3) {
    display: none;
  }
  .user-card:nth-child(4) {
    display: none;
  }
}
@media (max-width: 768px) {
  .user-list {
    align-items: center;
    display: flex;
    flex-direction: column;
  }
  .landing__header {
    font-size: 40px;
    text-align: center;
    width: 90%;
  }
  .landing__highlights {
    align-items: center;
    display: flex;
    flex-direction: column;
    padding: 0 24px;
    width: 90%;
  }
  .landing__header--top {
    font-size: 40px;
    text-align: center;
    margin-bottom: 104px;
    width: 90%;
  }
  .landing__header--main {
    font-size: 40px;
  }
  .user-card {
    flex-direction: column;
  }
  .nav__list {
    flex-direction: column;
  }
  .footer__list {
    flex-direction: column;
  }
  .nav__link,
  .footer__link {
    padding: 8px 0;
  }
}
@media (max-width: 480px) {
  .user-card {
    text-align: center;
  }
  .search-form {
    margin: 15px 0;
  }
  .landing__header--top {
    font-size: 40px;
    text-align: center;
    margin-bottom: 104px;
  }
  .landing__highlights {
    align-items: center;
    display: flex;
    flex-direction: column;
    padding: 0 24px;
    width: 100%;
  }
  .landing__header--main {
    font-size: 40px;
    text-align: center;
  }
  .container {
    margin: 0 auto;
    padding: 0;
    width: 50%;
  }
}

